<resources>
    <string name="app_name">sendME aCab</string>
    <string name="tv_Head">sendME aCab</string>
    <string name="et_email">Email address</string>
    <string name="et_password">Password</string>
    <string name="time">Time</string>
    <string name="order_Number">Order Number</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="totalPrice">Total Price</string>
    <string name="customer">Customer</string>
    <string name="phoneNumber">Phone number</string>
    <string name="title_activity_define_trip">DefineTripActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_navbar_drawer">NavbarDrawerActivity</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnSetPickupMap">Set Pickup On Map</string>
    <string name="btnSetDropoffMap">Set Dropff On Map</string>
    <string name="btnUseLocation">Use Current Location</string>
    <string name="btnUseDefaultAddress">My Default Address</string>
    <string name="btn_ChangePassword">Change Password</string>
    <string name="btn_saveChanges">Save Changes</string>
    <string name="fgtPassword">I forgot my password</string>
    <string name="btnRecoverPassword">Recover Password</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="tv_resendEmail">Resend Email</string>
    <string name="tv_currentLocationYes">Current Location:</string>
    <string name="tv_currentLocationNo">Switch on your device\'s location to see your current location</string>
    <string name="et_NewPassword">New Password</string>
    <string name="et_NewPasswordAgn">Re-enter New Password</string>
    <string name="btn_ResetPassword">Reset Password</string>
    <string name="et_NameSignUp">Name</string>
    <string name="et_SurnameSignUp">Surname</string>
    <string name="et_PhoneSignUp">Phone Number</string>
    <string name="et_EmailSignUp">Email Address</string>
    <string name="et_AddressSignUp">Default Address</string>
    <string name="et_PasswordAgn">Re-enter Password</string>
<<<<<<< HEAD
    <string name="go_back_to_login">Go back to Login</string>

    <string name="api_key">AIzaSyBV0bZmAnuY96_VoTFR-7BxgngH86P3Hv8</string>

=======
>>>>>>> 96ca45c075921af96a02ed9c19ca74ca3b8d1439
    <string name="et_PickupAddress">Enter Pickup Address</string>
    <string name="et_DropoffAddress">Enter Drop-off Address</string>
    <string name="title_activity_trip_spec">TripSpec</string>
    <string name="title_activity_trip_details">TripDetails</string>
<<<<<<< HEAD

    <string name="back_to_login">Back to Login</string>

=======
    <string name="tv_back_to_login">Back to Login</string>
    <string name="tv_viewProfile">View Profile Settings</string>
    <string name="title_myProfile">My Profile</string>
    <string name="tv_CurrentPassword">Current Password</string>
    <string name="api_key">AIzaSyBV0bZmAnuY96_VoTFR-7BxgngH86P3Hv8</string>
    <string name="map_key" translatable="false">AIzaSyBLCIeprajGmDHwzYDy-pkHPKJtO8juWLo</string>
    <string name="title_activity_trip_confirm">TripConfirm</string>
    <string name="title_activity_trip_finalise">TripFinaliseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
>>>>>>> 96ca45c075921af96a02ed9c19ca74ca3b8d1439
</resources>
