<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/load_pic"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/iv_ResetPassword"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_marginTop="10dp"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:src="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/etNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:drawableStart="@drawable/ic_profile"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/et_NameSignUp"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/etSurnameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_profile"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/et_SurnameSignUp"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/etPhoneSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/et_PhoneSignUp"
        android:inputType="phone"
        android:padding="10dp"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/etEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_message"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/etAddressSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/et_AddressSignUp"
        android:inputType="textPostalAddress"
        android:padding="10dp"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/etPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_lock_password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/etPasswordAgnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_lock_password_agn"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/et_PasswordAgn"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textCursorDrawable="@null" />

    <Button
        android:id="@+id/btnSignUpDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/page_icon_background"
        android:gravity="center_horizontal"
        android:onClick="btnSignUpDone_OnClick"
        android:padding="10dp"
        android:text="@string/btnSignUp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/tvBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:gravity="center|center_horizontal"
        android:paddingTop="6dp"
        android:text="@string/tv_back_to_login"
        android:textSize="14sp"
        android:visibility="gone"/>
</LinearLayout>