<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/load_pic"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_marginTop="10dp"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:src="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@layout/rounded_border_edittext"
        android:capitalize="none"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/et_email"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@layout/rounded_border_edittext"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textCursorDrawable="@null" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/page_icon_background"
        android:gravity="center_horizontal"
        android:onClick="btnLogin_OnClick"
        android:padding="10dp"
        android:text="@string/btnLogin"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/tv_fgt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:gravity="center|center_horizontal"
        android:paddingTop="6dp"
        android:text="@string/fgtPassword"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/page_icon_background"
        android:gravity="center_horizontal"
        android:onClick="btnSignUp_OnClick"
        android:padding="10dp"
        android:text="@string/btnSignUp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal|bold" />
</LinearLayout>