<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/load_pic"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/iv_fgtPassword"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_marginTop="10dp"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:src="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/et_fgtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:autoText="false"
        android:background="@layout/rounded_border_edittext"
        android:capitalize="none"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/et_email"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textCursorDrawable="@null" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/page_icon_background"
        android:gravity="center_horizontal"
        android:onClick="btnRecoverPassword_OnClick"
        android:padding="10dp"
        android:text="@string/btnRecoverPassword"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/tv_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:gravity="center|center_horizontal"
        android:paddingTop="6dp"
        android:text="@string/tv_resendEmail"
        android:textSize="18sp"
        android:visibility="invisible" />
</LinearLayout>